--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/ismikin/my-little-todo#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "jest": "^24.0.0"
+    "jest": "^24.0.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
