--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,11 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
+
+  api:
+    build: ./backend
+    restart: always
+    links:
+      - mongo
+    ports:
+      - 5000:5000
