--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "API for my little todo app",
   "main": "src/server.js",
   "scripts": {
-    "test": "jest tests/*.js --detectOpenHandles",
+    "test": "jest tests/*.js",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && node dist/src/server.js",
     "start-dev": "nodemon src/server.js -e js",
-    "debug": "npm run build && nodemon --inspect dist/src/server.js -e js"
+    "debug": "npm run build && nodemon --inspect dist/src/server.js -e js",
+    "lint": "eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -31,8 +32,20 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "eslint": "^5.12.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.3.1",
     "nodemon": "^1.18.6",
     "rimraf": "^2.6.2",
     "supertest": "^3.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run lint && yarn run test"
+    }
   }
 }
