--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,5 +31,11 @@
 		"not ie <= 11",
 		"not op_mini all"
 	],
-	"devDependencies": {}
+	"devDependencies": {
+		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-react": "^7.0.0",
+		"babel-jest": "^24.0.0",
+		"jest": "^24.0.0",
+		"react-test-renderer": "^16.7.0"
+	}
 }
