--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"ci-test": "CI=true react-scripts test",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/*.js"
