--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"build": "react-scripts build",
 		"ci-test": "CI=true react-scripts test",
 		"test": "react-scripts test",
+		"coverage": "react-scripts test --coverage",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/*.js"
 	},
