--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,5 +39,10 @@
 		"babel-jest": "^24.0.0",
 		"jest": "^24.0.0",
 		"react-test-renderer": "^16.7.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "yarn run lint && yarn run test"
+		}
 	}
 }
