--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"eslint-plugin-react": "^7.12.4",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
 		"react-scripts": "2.1.3"
@@ -39,10 +40,5 @@
 		"babel-jest": "^24.0.0",
 		"jest": "^24.0.0",
 		"react-test-renderer": "^16.7.0"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "yarn run lint && yarn run test"
-		}
 	}
 }
