--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,6 +18,8 @@
 		"indent": ["error", "tab"],
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
-		"semi": ["error", "never"]
+		"semi": ["error", "never"],
+		"react/jsx-uses-react": 1,
+		"react/jsx-uses-vars": 1
 	}
 }
