--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "start": "npm run build && node dist/src/server.js",
     "start-dev": "nodemon src/server.js -e js",
     "debug": "npm run build && nodemon --inspect dist/src/server.js -e js",
-    "lint": "eslint src/*.js"
+    "lint": "eslint src/*.js",
+    "coverage": "jest tests/*.js --coverage"
   },
   "repository": {
     "type": "git",
