--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,18 +11,15 @@ COPY yarn.lock ./
 
 # TODO: Create test.Dockerfile and install --dev and run tests there
 # + run coverage and upload reports
-RUN yarn install --dev
+RUN yarn install
 RUN yarn add react-scripts
 
-# TODO: fix build!
+# FIXME: fix build!
 # RUN yarn run build
 
 
 # Bundle app source
 COPY . .
-
-# Run tests
-RUN yarn run ci-test
 
 EXPOSE 3000
 CMD [ "yarn", "run", "start" ]
