--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
               --build-arg baseImage=ismikin/my-little-todo_backend:${CIRCLE_WORKFLOW_ID} \
               -t my-little-todo_backend-test-img backend
 
-            docker build -f .circleci/test.fronte.Dockerfile \
+            docker build -f .circleci/test.frontend.Dockerfile \
               --build-arg baseImage=ismikin/my-little-todo_frontend:${CIRCLE_WORKFLOW_ID} \
               -t my-little-todo_frontend-test-img backend
 
