--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
           name: Push application Docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker login
               docker push ismikin/my-little-todo_backend:${CIRCLE_WORKFLOW_ID}
               docker push ismikin/my-little-todo_frontend:${CIRCLE_WORKFLOW_ID}
             fi
