--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/ismikin/my-little-todo#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jest": "^24.0.0",
+    "mongoose": "^5.4.7",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
