--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,27 +5,31 @@ version: "3.1"
 
 services:
   mongo:
-    image: mongo
+    image: aashreys/mongo-auth:latest
+    environment:
+      - AUTH=yes
+      - MONGODB_ADMIN_USER=admin
+      - MONGODB_ADMIN_PASS=admin123
+      - MONGODB_APPLICATION_DATABASE=mylittletodo
+      - MONGODB_APPLICATION_USER=mylittletodo
+      - MONGODB_APPLICATION_PASS=pass123
     restart: always
     ports:
       - 27017:27017
     volumes:
       - ./migrations:/docker-entrypoint-initdb.d/
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-      MONGO_INITDB_DATABASE: mylittletodo
+      - ./mongo_data:/data/db
 
-  mongo-express:
-    image: mongo-express
-    restart: always
-    links:
-      - mongo
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   links:
+  #     - mongo
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: admin123
 
   api:
     build: ./backend
@@ -34,6 +38,8 @@ services:
       - mongo
     ports:
       - 5000:5000
+    environment:
+      DB_URL: mongodb://mylittletodo:pass123@mongo:27017/mylittletodo
 
   ui:
     build: ./frontend
