--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"bootstrap": "^4.2.1",
 		"eslint-plugin-react": "^7.12.4",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
-		"react-scripts": "2.1.3"
+		"react-scripts": "2.1.3",
+		"reactstrap": "^7.1.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
