Add NODE_PATH to scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
 		"reactstrap": "^7.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "NODE_PATH=src react-scripts start",
 		"build": "react-scripts build",
-		"ci-test": "CI=true react-scripts test",
+		"ci-test": "NODE_PATH=src CI=true react-scripts test",
 		"test": "react-scripts test",
 		"coverage": "react-scripts test --coverage",
 		"eject": "react-scripts eject",
