--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jest": "^24.0.0",
     "mongoose": "^5.4.7",
