--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,16 +20,16 @@ services:
       - ./migrations:/docker-entrypoint-initdb.d/
       - ./mongo_data:/data/db
 
-  # mongo-express:
-  #   image: mongo-express
-  #   restart: always
-  #   links:
-  #     - mongo
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: admin123
+  mongo-express:
+    image: mongo-express
+    restart: always
+    links:
+      - mongo
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin123
 
   api:
     build: ./backend
@@ -48,3 +48,6 @@ services:
       - api
     ports:
       - 3000:3000
+    environment:
+      API_HOST: api
+      API_PORT: 5000
