--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
 		"@fortawesome/react-fontawesome": "^0.1.4",
 		"bootstrap": "^4.2.1",
 		"eslint-plugin-react": "^7.12.4",
+		"lodash": "^4.17.11",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
 		"react-scripts": "2.1.3",
