--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
 		"coverage": "react-scripts test --coverage",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/*.js",
-		"storybook": "start-storybook -p 6006 -c .storybook"
+		"storybook": "NODE_PATH=src start-storybook -p 6006 -c .storybook"
 	},
 	"keywords": [],
 	"author": "IsmiKin <ismikin@gmail.com> (http://github.com/ismikin)",
