--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
 		"start-dev": "NODE_PATH=src REACT_APP_API_HOST=localhost REACT_APP_API_PORT=5000 react-scripts start",
 		"build": "NODE_PATH=src react-scripts build",
 		"ci-test": "NODE_PATH=src CI=true react-scripts test",
-		"test": "NODE_PATH=src react-scripts test --env=jsdom",
+		"test": "NODE_PATH=src react-scripts test",
 		"coverage": "NODE_PATH=src react-scripts test --coverage",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/*.js",
